--- a/TheGame/Boards/Base.lproj/Main.storyboard
+++ b/TheGame/Boards/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="dn6-ku-MNg" kind="presentation" identifier="loginToCreate" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="aZI-Xe-jSW"/>
+                                                    <action selector="showCreateAccount:" destination="ISV-GM-3yy" eventType="touchUpInside" id="dVY-AM-swY"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AW9-Zk-Ubh">
@@ -77,7 +77,7 @@
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                 <state key="normal" title="Login to Existing Account"/>
                                                 <connections>
-                                                    <segue destination="5Ja-PZ-cua" kind="presentation" identifier="loginToAccount" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="gkH-cw-qYS"/>
+                                                    <action selector="showAccountLogin:" destination="ISV-GM-3yy" eventType="touchUpInside" id="lmd-H9-VS5"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -133,6 +133,44 @@
             </objects>
             <point key="canvasLocation" x="-1506" y="-98"/>
         </scene>
+        <!--Multi Modal View Controller-->
+        <scene sceneID="lS5-Ca-a29">
+            <objects>
+                <viewController storyboardIdentifier="multiModalVC" id="PnI-Ac-n1y" customClass="MultiModalViewController" customModule="TheGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zMH-PA-Kbk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7yq-CX-FDX" customClass="GradientView" customModule="TheGame" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="topColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="midColor">
+                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7yq-CX-FDX" firstAttribute="top" secondItem="zMH-PA-Kbk" secondAttribute="top" id="6eK-GE-J5a"/>
+                            <constraint firstItem="UAC-Jg-wbN" firstAttribute="trailing" secondItem="7yq-CX-FDX" secondAttribute="trailing" id="C3h-Kx-MAJ"/>
+                            <constraint firstItem="UAC-Jg-wbN" firstAttribute="bottom" secondItem="7yq-CX-FDX" secondAttribute="bottom" id="lp1-6B-8Sc"/>
+                            <constraint firstItem="7yq-CX-FDX" firstAttribute="leading" secondItem="UAC-Jg-wbN" secondAttribute="leading" id="rpq-Wa-yqZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UAC-Jg-wbN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eVz-o8-3Pn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-815" y="-95"/>
+        </scene>
         <!--accountLoginVC-->
         <scene sceneID="58t-ZD-Xbk">
             <objects>
@@ -141,27 +179,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="naI-xX-dTp">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ldm-9d-cd9">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X6m-5m-Nhc">
-                                            <rect key="frame" x="0.0" y="0.0" width="80" height="440"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="lDo-Sl-Hfg">
-                                                <rect key="frame" x="0.0" y="0.0" width="80" height="440"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </view>
-                                            <vibrancyEffect>
-                                                <blurEffect style="regular"/>
-                                            </vibrancyEffect>
-                                        </visualEffectView>
-                                    </subviews>
-                                </view>
-                                <blurEffect style="systemUltraThinMaterial"/>
-                            </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fwz-o6-Rbe">
                                 <rect key="frame" x="32" y="183.5" width="256" height="201"/>
                                 <subviews>
@@ -209,9 +226,6 @@
                                         <state key="normal" title="Cancel">
                                             <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <connections>
-                                            <segue destination="lYn-74-zFx" kind="unwind" identifier="accountToLogin" unwindAction="returnToLoginWithSegue:" id="DY3-jY-den"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -239,12 +253,8 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="naI-xX-dTp" firstAttribute="leading" secondItem="Wfc-Gt-RAV" secondAttribute="leading" id="L3t-ca-K8T"/>
-                            <constraint firstItem="naI-xX-dTp" firstAttribute="top" secondItem="Wfc-Gt-RAV" secondAttribute="top" id="Svg-YJ-LpL"/>
-                            <constraint firstItem="Wfc-Gt-RAV" firstAttribute="trailing" secondItem="naI-xX-dTp" secondAttribute="trailing" id="WpP-8A-oEO"/>
                             <constraint firstItem="fwz-o6-Rbe" firstAttribute="centerY" secondItem="90P-cW-wr2" secondAttribute="centerY" id="bPg-6k-p29"/>
                             <constraint firstItem="fwz-o6-Rbe" firstAttribute="centerX" secondItem="90P-cW-wr2" secondAttribute="centerX" id="bQo-PY-RGi"/>
-                            <constraint firstItem="Wfc-Gt-RAV" firstAttribute="bottom" secondItem="naI-xX-dTp" secondAttribute="bottom" id="dcV-eg-GIn"/>
                             <constraint firstItem="fwz-o6-Rbe" firstAttribute="width" secondItem="90P-cW-wr2" secondAttribute="width" multiplier="0.8" id="u94-ai-ekO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wfc-Gt-RAV"/>
@@ -255,16 +265,14 @@
                     <connections>
                         <outlet property="cancelButton" destination="Z78-Sc-i1r" id="oU8-di-NgP"/>
                         <outlet property="loginButton" destination="som-AQ-sVJ" id="bQK-hg-WtE"/>
+                        <outlet property="managedView" destination="fwz-o6-Rbe" id="fZJ-Km-wuJ"/>
                         <outlet property="password" destination="rSa-Ng-wQd" id="drG-By-fB6"/>
-                        <outlet property="popupView" destination="fwz-o6-Rbe" id="GhV-LA-zQC"/>
                         <outlet property="username" destination="1hV-Yk-Tb8" id="53g-9e-0bH"/>
-                        <segue destination="lYn-74-zFx" kind="unwind" identifier="accountToRoot" unwindAction="returnToRootWithSegue:" id="oTF-MY-EhY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QD8-ah-aZ8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="lYn-74-zFx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-287" y="262"/>
+            <point key="canvasLocation" x="666" y="-98"/>
         </scene>
         <!--createAccountVC-->
         <scene sceneID="GvY-9u-Sdx">
@@ -274,27 +282,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="14k-iw-4D3">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wji-zM-g4r">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="19Z-PF-Hyz">
-                                            <rect key="frame" x="0.0" y="0.0" width="80" height="440"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="SWg-zd-qjI">
-                                                <rect key="frame" x="0.0" y="0.0" width="80" height="440"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </view>
-                                            <vibrancyEffect>
-                                                <blurEffect style="regular"/>
-                                            </vibrancyEffect>
-                                        </visualEffectView>
-                                    </subviews>
-                                </view>
-                                <blurEffect style="systemUltraThinMaterial"/>
-                            </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V8S-by-9Yq">
                                 <rect key="frame" x="16" y="110.5" width="288" height="347.5"/>
                                 <subviews>
@@ -459,7 +446,7 @@
                                             <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="TXM-wV-KUZ" kind="unwind" identifier="createToLogin" unwindAction="returnToLoginWithSegue:" id="heC-lo-QOg"/>
+                                            <action selector="cancel:" destination="dn6-ku-MNg" eventType="touchUpInside" id="6AB-2d-PNA"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tJ2-QT-Kd2">
@@ -527,11 +514,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="14k-iw-4D3" firstAttribute="leading" secondItem="DJp-2M-ETI" secondAttribute="leading" id="4JN-KL-t4L"/>
                             <constraint firstItem="V8S-by-9Yq" firstAttribute="width" secondItem="JUu-Sq-rYE" secondAttribute="width" multiplier="0.9" id="9Us-jZ-AwO"/>
-                            <constraint firstItem="14k-iw-4D3" firstAttribute="top" secondItem="DJp-2M-ETI" secondAttribute="top" id="H5a-L3-q8Z"/>
-                            <constraint firstItem="DJp-2M-ETI" firstAttribute="trailing" secondItem="14k-iw-4D3" secondAttribute="trailing" id="Nhd-q5-9s8"/>
-                            <constraint firstItem="DJp-2M-ETI" firstAttribute="bottom" secondItem="14k-iw-4D3" secondAttribute="bottom" id="cdU-yX-flc"/>
                             <constraint firstItem="V8S-by-9Yq" firstAttribute="centerX" secondItem="JUu-Sq-rYE" secondAttribute="centerX" id="eQQ-vg-yqp"/>
                             <constraint firstItem="V8S-by-9Yq" firstAttribute="centerY" secondItem="JUu-Sq-rYE" secondAttribute="centerY" id="kLk-N0-oO4"/>
                         </constraints>
@@ -547,22 +530,19 @@
                         <outlet property="emailError" destination="ZQe-RD-ACK" id="X2y-KR-ChJ"/>
                         <outlet property="emailInfo" destination="2FK-oP-NtM" id="xKV-gx-kTY"/>
                         <outlet property="emailTextField" destination="YfE-lz-VYB" id="YlR-NW-oGb"/>
+                        <outlet property="managedView" destination="V8S-by-9Yq" id="aIc-qr-c3p"/>
                         <outlet property="password1TextField" destination="y9a-KR-shf" id="Iqa-Uv-d56"/>
                         <outlet property="password2TextField" destination="tON-XH-4Dd" id="UWz-Wc-2bo"/>
                         <outlet property="passwordError" destination="xit-ls-ZTg" id="lGj-xy-6xo"/>
                         <outlet property="passwordInfo" destination="6p6-Cp-dhb" id="xkb-jv-jR0"/>
-                        <outlet property="popupView" destination="V8S-by-9Yq" id="4aH-Co-KHp"/>
                         <outlet property="usernameError" destination="TSB-Uh-GD0" id="fDq-vt-fQV"/>
                         <outlet property="usernameInfo" destination="nGS-oY-BbX" id="WK8-qH-nPm"/>
                         <outlet property="usernameTextField" destination="MVo-gd-LOE" id="PcA-gT-47Y"/>
-                        <segue destination="TXM-wV-KUZ" kind="unwind" identifier="createToRoot" unwindAction="returnToRootWithSegue:" id="EMy-PS-D0W"/>
-                        <segue destination="TXM-wV-KUZ" kind="unwind" identifier="createToAccount" unwindAction="returnToLoginAndSwitchWithSegue:" id="TBx-jp-UWm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q5j-bO-fUc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="TXM-wV-KUZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-287" y="-449"/>
+            <point key="canvasLocation" x="-32" y="-98"/>
         </scene>
         <!--rootVC-->
         <scene sceneID="5Hp-s0-azX">
