Opponent List Actions

--- a/TheGame/Boards/Base.lproj/Main.storyboard
+++ b/TheGame/Boards/Base.lproj/Main.storyboard
@@ -207,31 +207,19 @@
                                     <action selector="handleLostButton:" destination="rCI-oy-28V" eventType="touchUpInside" id="PDz-R1-ELW"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opponents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ox4-ag-Vz5">
-                                <rect key="frame" x="20" y="0.0" width="162" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="a3g-Op-gHm"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="162" id="lf7-xM-Cg2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="28"/>
-                                <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="al6-jJ-XbB" userLabel="Add Opponent Button">
-                                <rect key="frame" x="268" y="2" width="32" height="32"/>
+                                <rect key="frame" x="268" y="0.0" width="32" height="32"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="Ubi-mM-FCW"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="32" id="qYk-az-IFM"/>
                                     <constraint firstAttribute="width" constant="32" id="uvy-18-Wsl"/>
                                     <constraint firstAttribute="height" constant="32" id="wBm-1I-wXe"/>
                                 </constraints>
-                                <state key="normal" image="icons8-add_user_group"/>
+                                <state key="normal" image="dice"/>
                                 <connections>
-                                    <action selector="addOpponent:" destination="rCI-oy-28V" eventType="touchUpInside" id="1Wz-qh-5wM"/>
+                                    <action selector="handleSettings:" destination="rCI-oy-28V" eventType="touchUpInside" id="l2I-VF-M6j"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tLU-FE-EwV">
-                                <rect key="frame" x="20" y="44" width="280" height="316"/>
+                                <rect key="frame" x="20" y="33" width="280" height="327"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -275,7 +263,6 @@
                                     <constraint firstAttribute="height" constant="22" id="bq2-P3-g7E"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSY-DS-bSB">
@@ -312,18 +299,24 @@
                                     <action selector="opponentLost:" destination="WDJ-Qp-Kwo" eventType="touchUpInside" id="8u3-Zp-2zs"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SnE-yU-oRF">
-                                <rect key="frame" x="20" y="399.5" width="32" height="29"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mt5-bU-OMo">
+                                <rect key="frame" x="20" y="4" width="24" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="aJW-bj-aEi"/>
-                                    <constraint firstAttribute="height" constant="32" id="nFd-8D-OiW"/>
+                                    <constraint firstAttribute="width" constant="24" id="KsS-ur-ll5"/>
+                                    <constraint firstAttribute="height" constant="24" id="hNa-yk-JO8"/>
                                 </constraints>
-                            </imageView>
+                                <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <state key="normal" image="icons8-add_friend"/>
+                                <connections>
+                                    <action selector="addOpponent:" destination="rCI-oy-28V" eventType="touchUpInside" id="RLM-4u-Xvl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ox4-ag-Vz5" firstAttribute="top" secondItem="cBi-Tb-NhW" secondAttribute="top" id="1Ik-z6-DH1"/>
+                            <constraint firstItem="al6-jJ-XbB" firstAttribute="top" secondItem="cBi-Tb-NhW" secondAttribute="top" id="08G-fo-7E2"/>
+                            <constraint firstItem="Mt5-bU-OMo" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" constant="20" id="1BV-9i-9Lk"/>
                             <constraint firstItem="3of-en-5bS" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" id="1hh-Nt-KtP"/>
                             <constraint firstItem="B6z-g7-djW" firstAttribute="centerY" secondItem="9Rz-bg-2yg" secondAttribute="centerY" id="31X-Fu-FAa"/>
                             <constraint firstItem="cBi-Tb-NhW" firstAttribute="trailing" secondItem="o7G-1R-M0X" secondAttribute="trailing" constant="20" id="3um-ue-ZbM"/>
@@ -331,13 +324,10 @@
                             <constraint firstItem="9Rz-bg-2yg" firstAttribute="top" secondItem="tLU-FE-EwV" secondAttribute="bottom" id="6aH-y1-7L4"/>
                             <constraint firstItem="B6z-g7-djW" firstAttribute="width" secondItem="9Rz-bg-2yg" secondAttribute="width" id="9UL-rr-G5t"/>
                             <constraint firstItem="3of-en-5bS" firstAttribute="bottom" secondItem="cBi-Tb-NhW" secondAttribute="bottom" id="BDn-dK-Bbp"/>
-                            <constraint firstItem="SnE-yU-oRF" firstAttribute="leading" secondItem="tLU-FE-EwV" secondAttribute="leading" id="CgU-u8-Vbb"/>
-                            <constraint firstItem="tLU-FE-EwV" firstAttribute="top" secondItem="ox4-ag-Vz5" secondAttribute="bottom" constant="8" id="EZL-QN-2Az"/>
                             <constraint firstItem="cBi-Tb-NhW" firstAttribute="trailing" secondItem="7OE-cD-3ew" secondAttribute="trailing" constant="20" id="L9n-ft-MfU"/>
                             <constraint firstItem="tLU-FE-EwV" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" constant="20" id="Mrw-CI-E0b"/>
                             <constraint firstItem="cBi-Tb-NhW" firstAttribute="trailing" secondItem="tLU-FE-EwV" secondAttribute="trailing" constant="20" id="N7b-Js-YYh"/>
                             <constraint firstItem="3of-en-5bS" firstAttribute="top" secondItem="7OE-cD-3ew" secondAttribute="bottom" constant="8" id="Q0c-ky-wMw"/>
-                            <constraint firstItem="SnE-yU-oRF" firstAttribute="centerY" secondItem="FDz-gI-m8F" secondAttribute="centerY" id="Saw-fR-0KR"/>
                             <constraint firstItem="7OE-cD-3ew" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" constant="20" id="TA1-hN-KYh"/>
                             <constraint firstItem="lXc-Qy-AQ8" firstAttribute="centerY" secondItem="gSY-DS-bSB" secondAttribute="centerY" id="Vbj-gy-kfM"/>
                             <constraint firstItem="lXc-Qy-AQ8" firstAttribute="top" secondItem="fqv-4q-diE" secondAttribute="bottom" constant="8" id="W6s-qE-vVF"/>
@@ -346,16 +336,15 @@
                             <constraint firstItem="7OE-cD-3ew" firstAttribute="top" secondItem="9Rz-bg-2yg" secondAttribute="bottom" id="ZHt-Ir-aYs"/>
                             <constraint firstItem="cBi-Tb-NhW" firstAttribute="trailing" secondItem="lXc-Qy-AQ8" secondAttribute="trailing" constant="20" id="ZSE-Pn-enc"/>
                             <constraint firstItem="B6z-g7-djW" firstAttribute="height" secondItem="9Rz-bg-2yg" secondAttribute="height" id="aGa-7n-50B"/>
-                            <constraint firstItem="al6-jJ-XbB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ox4-ag-Vz5" secondAttribute="trailing" constant="8" symbolic="YES" id="bwl-yo-tAG"/>
                             <constraint firstItem="B6z-g7-djW" firstAttribute="centerX" secondItem="9Rz-bg-2yg" secondAttribute="centerX" id="cbO-kO-k8V"/>
-                            <constraint firstItem="ox4-ag-Vz5" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" constant="20" id="gNj-ue-HWo"/>
                             <constraint firstItem="3of-en-5bS" firstAttribute="trailing" secondItem="cBi-Tb-NhW" secondAttribute="trailing" id="hbT-KH-jz9"/>
+                            <constraint firstItem="tLU-FE-EwV" firstAttribute="top" secondItem="Mt5-bU-OMo" secondAttribute="bottom" constant="5" id="hv1-yG-lt5"/>
                             <constraint firstItem="9Rz-bg-2yg" firstAttribute="centerX" secondItem="cbB-rl-LvI" secondAttribute="centerX" id="jhj-0s-Axf"/>
                             <constraint firstItem="o7G-1R-M0X" firstAttribute="top" secondItem="tLU-FE-EwV" secondAttribute="bottom" constant="20" id="lEg-KZ-cRv"/>
                             <constraint firstItem="fqv-4q-diE" firstAttribute="top" secondItem="o7G-1R-M0X" secondAttribute="bottom" constant="8" id="lPI-Q1-DtS"/>
-                            <constraint firstItem="al6-jJ-XbB" firstAttribute="centerY" secondItem="ox4-ag-Vz5" secondAttribute="centerY" id="lcV-RH-4WP"/>
                             <constraint firstItem="cBi-Tb-NhW" firstAttribute="trailing" secondItem="fqv-4q-diE" secondAttribute="trailing" constant="20" id="vEe-bJ-mLt"/>
                             <constraint firstItem="7OE-cD-3ew" firstAttribute="top" secondItem="gSY-DS-bSB" secondAttribute="bottom" constant="2" id="wUQ-F5-BfY"/>
+                            <constraint firstItem="Mt5-bU-OMo" firstAttribute="top" secondItem="cBi-Tb-NhW" secondAttribute="top" constant="4" id="xU2-Qi-Vcd"/>
                             <constraint firstItem="gSY-DS-bSB" firstAttribute="leading" secondItem="cBi-Tb-NhW" secondAttribute="leading" constant="2" id="yxc-Xi-SS9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cBi-Tb-NhW"/>
@@ -367,7 +356,6 @@
                         <outlet property="game" destination="WDJ-Qp-Kwo" id="FVA-kS-AAg"/>
                         <outlet property="lastLossLabel" destination="7OE-cD-3ew" id="Xop-EI-TMq"/>
                         <outlet property="lostButton" destination="FDz-gI-m8F" id="RUg-pD-7YC"/>
-                        <outlet property="meIcon" destination="SnE-yU-oRF" id="cdG-Gy-g79"/>
                         <outlet property="oppenentTable" destination="tLU-FE-EwV" id="9JS-bY-fEy"/>
                     </connections>
                 </viewController>
@@ -468,9 +456,9 @@
     <resources>
         <image name="button_01" width="344" height="200"/>
         <image name="button_12_gray" width="344" height="200"/>
+        <image name="dice" width="1024" height="1024"/>
         <image name="dice_splash" width="837" height="681"/>
-        <image name="icons8-add_user_group" width="32" height="32"/>
-        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="icons8-add_friend" width="32" height="32"/>
         <namedColor name="dieRed">
             <color red="0.80500000715255737" green="0.15099999308586121" blue="0.11500000208616257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
